--- a/scss/main.css
+++ b/scss/main.css
@@ -204,10 +204,6 @@ body {
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(41, 34, 34, 0);
 }
@@ -433,7 +429,6 @@ caption {
 th {
   text-align: inherit;
   text-align: -webkit-match-parent;
-  text-align: match-parent;
 }
 
 thead,
@@ -493,7 +488,8 @@ select:disabled {
 button,
 [type=button],
 [type=reset],
-[type=submit] {
+  -webkit-appearance: button;
+  appearance: button;
   -webkit-appearance: button;
 }
 button:not(:disabled),
@@ -549,7 +545,8 @@ legend + * {
 ::-webkit-inner-spin-button {
   height: auto;
 }
-
+  -webkit-appearance: textfield;
+  appearance: textfield;
 [type=search] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
@@ -2048,34 +2045,41 @@ progress {
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
 }
-
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
 .table-responsive {
   overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 @media (max-width: 575.98px) {
   .table-responsive-sm {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 767.98px) {
   .table-responsive-md {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 991.98px) {
   .table-responsive-lg {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 1399.98px) {
   .table-responsive-xxl {
     overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 .form-label {
@@ -11965,4 +11969,19 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+main {
+  margin-bottom: 250px;
+}
+
+footer.footer {
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
