--- a/scss/main.css
+++ b/scss/main.css
@@ -11997,4 +11997,8 @@ footer.footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.texte-justify {
+  text-align: justify;
 }/*# sourceMappingURL=main.css.map */
