--- a/scss/main.css
+++ b/scss/main.css
@@ -11982,23 +11982,58 @@ footer.footer {
   width: 100%;
 }
 
+p {
+  font-family: "hind Madurai", serif;
+  font-size: 18px;
+}
+
 .hero-scene {
   position: relative;
-  height: 300px;
+}
+.hero-scene::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("../images/fondheroscene.jpg");
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  filter: brightness(0.5);
+}
+.hero-scene * {
+  position: relative;
 }
 
 .hero-scene-content {
-  height: 100%;
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.texte-justify {
+.text-justify {
   text-align: justify;
+}
+
+.image-card {
+  position: relative;
+}
+.image-card:hover .titre-image {
+  opacity: 1;
+}
+.image-card:hover img {
+  filter: brightness(0.3);
+}
+.image-card img {
+  transition: all 0.3s;
+}
+.image-card .titre-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s;
 }/*# sourceMappingURL=main.css.map */
