--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,39 +1,76 @@
 @import url("/node_modules/bootstrap-icons/font/bootstrap-icons.css");
-@import 'custom';
+@import "custom";
 
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 
 main {
-    margin-bottom: 250px;
+  margin-bottom: 250px;
 }
 
 footer.footer {
-    padding: 15px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
+p {
+  font-family: $font-family-serif;
+  font-size: 18px;
+}
 .hero-scene {
-    position: relative; // Ajout de position relative pour s'assurer que l'élément est positionné correctement
-    height: 300px; // Ajout d'une hauteur pour s'assurer que l'élément a une taille définie
-    background-image: url("../images/fondheroscene.jpg"); // Vérifiez que le chemin est correct
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("../images/fondheroscene.jpg");
     background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    filter: brightness(0.5);
+  }
+  * {
+    //positionner les éléments par rapport à son parent(before)
+    position: relative;
+  }
 }
 
 .hero-scene-content {
-    height: 100%; // Assurez-vous que la hauteur est définie ici
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.texte-justify{
-    text-align: justify;
+.text-justify {
+  text-align: justify;
+}
+
+.image-card {
+  position: relative;
+  &:hover {
+    .titre-image {
+      opacity: 1;
+    }
+    img {
+      filter: brightness(0.3);
+    }
+  }
+  img {
+    transition: all 0.3s;
+  }
+  .titre-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all 0.3s;
+  }
 }
